styling navbar and fixes alignment issues in it

--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,10 @@ body,
 .slick-slide > div{
   margin: 0px 20px;
 }
+
+.active-link{
+  /* color: #4851f6; */
+  /* border-bottom: #f4ebed; */
+  font-weight: bold;
+}
+
